--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,22 @@
+sudo: false
 language: perl
 matrix:
     fast_finish: true
 perl:
-    - "5.24"
-    - "5.22"
-    - "5.20"
-    - "5.18"
-    - "5.16"
-    - "5.14"
-    - "5.12"
+   - '5.24'
+   - '5.22'
+   - '5.20'
+   - '5.18'
+   - '5.16'
+   - '5.14'
 before_install:
-    - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
-    - source ~/travis-perl-helpers/init
-    - build-perl
-    - perl -V
-    # install prereqs
-    - "cpanm -n Test::Most"
-    - "cpanm -n Test::Exception"
-    - "cpanm -n Math::CDF"
-    - "cpanm -n Machine::Epsilon"
-    - "cpanm -n Test::Requires::Git"
-    - "cpanm -n Devel::Cover::Report::Codecov"
-    - "cpanm -n Test::NoWarnings"
+   - git config --global user.name "TravisCI"
+   - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
+install:
+   - cpanm --quiet --notest Dist::Zilla Dist::Zilla::App::Command::cover App::cpm Devel::Cover::Report::Codecov
+   - cpm install -w 2 --mirror=http://cpan.cpantesters.org/ -g $(dzil authordeps --missing)
+   - cpm install -w 2 --mirror=http://cpan.cpantesters.org/ -g $(dzil listdeps --author --missing)
+
 script:
-    perl Makefile.PL && make test && cover -test -report codecov
+   - dzil smoke --release --author && dzil cover -test -report codecov && dzil xtest
 
