--- a/dist.ini
+++ b/dist.ini
@@ -3,6 +3,7 @@ author  = binary.com <BINARY@cpan.org>
 license = Perl_5
 copyright_holder = binary.com
 copyright_year   = 2017
+main_module = lib/Math/Business/BlackScholes.pm
 
 [Git::GatherDir]
 exclude_filename = Makefile.PL
@@ -53,14 +54,14 @@ perltidyrc = t/rc/.perltidyrc
 critic_config = t/rc/.perlcriticrc
 [SpellingCommonMistakesTests]
 [CopyFilesFromRelease]
-filename = lib/Math/Business/BlackScholes/Binaries.pm
+filename = lib/Math/Business/BlackScholes.pm
 filename = Makefile.PL
 [Git::Commit]
 allow_dirty = dist.ini
 allow_dirty = cpanfile
 allow_dirty = Changes
 allow_dirty = Makefile.PL
-allow_dirty = lib/Math/Business/BlackScholes/Binaries.pm
+allow_dirty = lib/Math/Business/BlackScholes.pm
 [Git::Tag]
 tag_format = v%v
 tag_message = Tag v%v for CPAN release
