use git push to test permisison

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,8 +66,9 @@ jobs:
                 echo "No changes, no need release"
                 exit 0
             fi
+            # use git push to test permission
+            git push github master
             echo "y\n" | DZIL_CONFIRMRELEASE_DEFAULT=y dzil release
-            git push
 
 workflows:
   build-workflow:
@@ -83,7 +84,7 @@ workflows:
               - "5.32"
               - "5.34"
     - release:
-       context: release-deriv
+       context: release-binary
        requires:
          - test
        filters:
